fix overflow name

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -290,6 +290,7 @@ body{
           }
         }
         .avatar{
+          width: 50px;
           img{
             -webkit-border-radius: 50%;
             border-radius: 50%;
@@ -297,6 +298,7 @@ body{
           h6{
             margin: 0;
             text-align: center;
+            overflow: hidden;
           }
         }
         p{
